--- a/latex/thesis_template/thesis.bib
+++ b/latex/thesis_template/thesis.bib
@@ -429,3 +429,17 @@ url = {https://zerobyte.io/publications/2017-BKJGGF-pop.pdf},
 year = {2017}
 }
 
+@article{Greenhoe2016,
+abstract = {Metric spaces provide a framework for analysis and have several very useful properties. Many of these properties follow in part from the triangle inequality. However, there are several applications in which the triangle inequality does not hold but in which we may still like to perform analysis. This paper investigates what happens if the triangle inequality is removed all together, leaving what is called a distance space, and also what happens if the triangle inequality is replaced with a much more general two parameter relation, which is herein called the "power triangle inequality". The power triangle inequality represents an uncountably large class of inequalities, and includes the triangle inequality, relaxed triangle inequality, and inframetric inequality as special cases. The power triangle inequality is defined in terms of a function that is herein called the "power triangle function". The power triangle function is itself a power mean, and as such is continuous and monotone with respect to its exponential parameter, and also includes the operations of maximum, minimum, mean square, arithmetic mean, geometric mean, and harmonic mean as special cases.},
+author = {Greenhoe, D.},
+doi = {10.15330/cmp.8.1.51-82},
+file = {:Users/arnaudpannatier/Documents/EPFL/Master{\_}Thesis{\_}side{\_}repo/bibliography/1610.07594.pdf:pdf},
+issn = {2075-9827},
+journal = {Carpathian Mathematical Publications},
+keywords = {arithmetic mean,distance space,geometric mean,harmonic,inframetric,maximum,mean,means square,metric space,minimum,power mean,quasi-metric space,relaxed triangle inequality,semimetric space,triangle inequality},
+number = {1},
+title = {{Properties of distance spaces with power triangle inequalities}},
+volume = {8},
+year = {2016}
+}
+
