First relecture after Spell-Check.

--- a/latex/thesis_template/thesis.bib
+++ b/latex/thesis_template/thesis.bib
@@ -352,9 +352,9 @@ url = {https://tools.ietf.org/html/rfc4786},
 year = {2006}
 }
 @article{Lamport2000,
-author = {Lamport, Leslie and Lamport, Leslie},
+author = {Lamport, Leslie},
 number = {May 1998},
-title = {{The Part-Time Parliament The Part-Time Parliament}},
+title = {{The Part-Time Parliament}},
 volume = {2},
 year = {2000}
 }
@@ -442,4 +442,15 @@ title = {{Properties of distance spaces with power triangle inequalities}},
 volume = {8},
 year = {2016}
 }
+
+@article{Mokadem2015,
+abstract = {Replicating for performance constitutes an important issue in large-scale data management systems. In this context, a significant number of replication strategies have been proposed for data grid systems. Some works classified these strategies into static vs. dynamic or centralised vs. decentralised or client vs. server initiated strategies. Very few works deal with a replication strategy classification based on the role of these strategies when building a replica management system. In this paper, we propose a new replication strategy classification based on objective functions of these strategies. Also, each replication strategy is designed according to the data grid topology for which it was proposed. We point out the impact of the topology on replication performance although most of these strategies have been proposed for a hierarchical grid topology. We also study the impact of some factors on performance of these strategies, e.g. access pattern, bandwidth consumption and storage capacity.},
+author = {Mokadem, Riad and Hameurlain, Abdelkader},
+doi = {10.4028},
+file = {:Users/arnaudpannatier/Documents/EPFL/Master{\_}Thesis{\_}side{\_}repo/bibliography/Mokadem{\_}12933.pdf:pdf},
+title = {{Data replication strategies with performance objective in data grid systems: a survey}},
+url = {http://dx.doi.org/10.1504/IJGUC.2015.066395},
+year = {2015}
+}
+
 
