--- a/latex/thesis_template/figures/regions/ellipsis.tex
+++ b/latex/thesis_template/figures/regions/ellipsis.tex
@@ -4,7 +4,7 @@
 \usetikzlibrary{arrows.meta}
 \usetikzlibrary{3d}
 
-\definecolor{grayUI}{HTML}{DFE6E9}
+\definecolor{grayUI}{HTML}{FFFFFF}
 \definecolor{blackUI}{HTML}{2d3436}
 \definecolor{blueUI}{HTML}{0984e3}
 \definecolor{orangeUI}{HTML}{e17055}
@@ -23,8 +23,18 @@
 
 \draw[fill=blueUI, opacity=0.2] (B1) circle [radius=1.6];
 \draw[blackUI,densely dotted] (B1) circle [radius=1.6];
+\draw[blackUI,densely dotted] (0.6,1.5,0.8) circle [radius=0.8];
+\draw[blackUI,densely dotted] (0.6,1.5,0.4) circle [radius=0.4];
+\draw[blackUI,densely dotted] (0.6,1.5,0.2) circle [radius=0.2];
+
+
 \draw[fill=blueUI,opacity=0.2] (B2) circle [radius=3.6];
 \draw[blackUI,densely dotted] (B2) circle [radius=3.6];
+\draw[blackUI,densely dotted]  (-0.0,0.7,1.2) circle [radius=1.6];
+%\draw[blackUI,densely dotted]  (-0.0,0.7,0.8) circle [radius=0.8];
+\draw[blackUI,densely dotted]  (-0.0,0.7,0.4) circle [radius=0.4];
+\draw[blackUI,densely dotted]  (-0.0,0.7,0.2) circle [radius=0.2];
+
 
 \draw[fill=orangeUI,opacity=0.2] (0.8,0.5,0) circle [radius=0.2];
 \draw[fill=orangeUI,opacity=0.2] (0.8,0.5,0.4) circle [radius=0.4];
