Change name of fig that was lost during rebase.

--- a/latex/thesis_template/thesis.tex
+++ b/latex/thesis_template/thesis.tex
@@ -1274,7 +1274,7 @@ than taking a bus from $A$ to $C$ [\autoref{fig:CFF-map}][\autoref{fig:CFF-NewDi
 
 \begin{figure}[!h] 
 \centering
-\includegraphics[width=450pt]{figures/CFF-map}
+\includegraphics[width=450pt]{figures/mapCFF}
 \caption{Map of the train network in Switzerland, line width is proportional to
  the number of connections per day.} \label{fig:CFF-map}
 \end{figure}
