Add new graphs to report.

--- a/latex/thesis_template/thesis.tex
+++ b/latex/thesis_template/thesis.tex
@@ -1543,6 +1543,21 @@ happen if the distribution of levels is not controlled.
   \label{fig:LocarnoTreaties-LocarnoFinal}
 \end{figure}
 
+\chapter{Space Time : Data} \label{app:SpaceTime-data}
+
+\begin{figure}[!h] 
+\centering
+\includegraphics[width=350pt]{figures/SpaceTime-Random}
+\caption{Graphs of the system using the new definition of the distance and random lottery at each epoch, the levels are depicted in different colors.}
+\label{fig:SpaceTime-Random}
+\end{figure}
+
+\begin{figure}[!h] 
+\centering
+\includegraphics[width=500pt]{figures/SpaceTime-Locarno}
+\caption{Graphs of the system using  using the new definition of the distance and \textit{Locarno Treaties} lottery at each epoch, the levels are depicted in different colors.}
+  \label{fig:SpaceTime-Locarno}
+\end{figure}
 
 \chapter{Dataset on Master Thesis}
 Here are some important random facts about this master's thesis. The
